content/core/2.0.0/umbraco-v8/reference/vendr-umbraco/vendr-umbraco-adapters/umbracoproductadapter.md
---
title: UmbracoProductAdapter
description: API reference for UmbracoProductAdapter in Vendr, the eCommerce solution for Umbraco
---
## UmbracoProductAdapter

```csharp
public class UmbracoProductAdapter : IProductAdapter
```

**Inheritance**

* interface [IProductAdapter](../../../vendr-core/vendr-core-adapters/iproductadapter/)

**Namespace**
* [Vendr.Umbraco.Adapters](../)

### Constructors

#### UmbracoProductAdapter

```csharp
public UmbracoProductAdapter(IUmbracoContextFactory umbracoContextFactory, 
    IContentService contentService, PublishedContentWrapperFactory publishedContentWrapperFactory)
```


### Methods

#### GetProductSnapshot (1 of 2)

```csharp
public virtual IProductSnapshot GetProductSnapshot(string productReference, string languageIsoCode)
```

---

#### GetProductSnapshot (2 of 2)

```csharp
public virtual IProductSnapshot GetProductSnapshot(string productReference, 
    string productVariantReference, string languageIsoCode)
```


---

#### TryGetProductReference

```csharp
public bool TryGetProductReference(Guid storeId, string sku, out string productReference, 
    out string productVariantReference)
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Umbraco.dll -->
