content/core/2.1.0/umbraco-v8/reference/vendr-umbraco/vendr-umbraco-adapters/umbracoproductadapter.md
---
title: UmbracoProductAdapter
description: API reference for UmbracoProductAdapter in Vendr, the eCommerce solution for Umbraco
---
## UmbracoProductAdapter

```csharp
public class UmbracoProductAdapter : ProductAdapterBase
```

**Inheritance**

* class [ProductAdapterBase](../../../vendr-core/vendr-core-adapters/productadapterbase/)

**Namespace**
* [Vendr.Umbraco.Adapters](../)

### Constructors

#### UmbracoProductAdapter

```csharp
public UmbracoProductAdapter(IUmbracoContextFactory umbracoContextFactory, 
    IContentService contentService, PublishedContentWrapperFactory publishedContentWrapperFactory)
```


### Methods

#### GetProductSnapshot

```csharp
public override IProductSnapshot GetProductSnapshot(Guid storeId, string productReference, 
    string productVariantReference, string languageIsoCode)
```


---

#### GetProductVariantAttributes

```csharp
public override IEnumerable<Attribute> GetProductVariantAttributes(Guid storeId, 
    string productReference, string languageIsoCode)
```


---

#### SearchProductSummaries

```csharp
public override PagedResult<IProductSummary> SearchProductSummaries(Guid storeId, 
    string languageIsoCode, string searchTerm, long currentPage = 1, long itemsPerPage = 50)
```


---

#### SearchProductVariantSummaries

```csharp
public override PagedResult<IProductVariantSummary> SearchProductVariantSummaries(Guid storeId, 
    string productReference, string languageIsoCode, string searchTerm, 
    IDictionary<string, IEnumerable<string>> attributes, long currentPage = 1, 
    long itemsPerPage = 50)
```


---

#### TryGetProductReference

```csharp
public override bool TryGetProductReference(Guid storeId, string sku, out string productReference, 
    out string productVariantReference)
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Umbraco.dll -->
